# myRAG

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  config.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: AGENTS.md  copilot-clause.md  copilot-instructions.md
.github/agents/: developer.md  reviewer.md
.github/instructions/: formatter-changes.md  parser-adding.md
.github/plan/: migration-plan.md
.github/skills/ingest-doc/: SKILL.md
.github/skills/lint-and-test/: SKILL.md
.github/workflows/: ci.yml
chunkers/: __init__.py
chunkers/tests/: test_chunker.py
cleaners/: __init__.py
cleaners/tests/: test_cleaner.py
conf/: clean_rules.yaml  config.example.yaml
doc/: AUDIT-2026-06-14.md  markitdown-migration-plan.md
embedders/: __init__.py  bge_m3.py
formatters/: __init__.py  prompts.py  writer.py
formatters/tests/: test_formatter.py
myrag/: __init__.py  pipeline.py
myrag/chunkers/tests/: test_chunker.py
myrag/cleaners/: __init__.py
myrag/cleaners/tests/: test_cleaner.py
myrag/formatters/: __init__.py  prompts.py
myrag/parsers/: text_cleaner.py
myrag/storage/: sqlite_vec.py
parsers/: __init__.py  dispatcher.py  docx.py  html.py  md_parser.py  pdf.py  txt.py
src/: config.py  pipeline.py
src/chunkers/: __init__.py
src/chunkers/tests/: test_chunker.py
src/cleaners/: __init__.py
src/cleaners/tests/: test_cleaner.py
src/config/tests/: test_config.py
src/embedders/: bge_m3.py  local_bge.py
src/embedders/tests/: test_embedder.py
src/formatters/: __init__.py  constants.py  prompts.py  writer.py
src/formatters/tests/: test_formatter.py  test_write_to_md.py
src/myrag/: config.py
src/myrag/embedders/: bge_m3.py
src/myrag/formatters/: writer.py
src/myrag/formatters/tests/: test_formatter.py
src/parsers/: __init__.py  dispatcher.py  text_cleaner.py
src/parsers/tests/: test_dispatcher.py
src/pipeline/: __init__.py  cli.py  core.py  ingest.py
src/storage/: sqlite_vec.py
src/storage/tests/: conftest.py  test_sqlite_vec.py
src/tests/: test_integration.py
storage/: sqlite_vec.py
