[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrag-pipeline"
version = "0.1.0"
description = "RAG data cleanup pipeline with multi-format parsers and bge-m3 embedding service."
requires-python = ">=3.10"
dependencies = [
    "markitdown>=0.1",              # Universal doc conversion (PDF, DOCX, MD, TXT)
    "trafilatura>=1.12",            # HTML content extraction
    "httpx>=0.27",                  # HTTP client for LLM + embedding APIs
    "langchain-text-splitters>=0.3", # MarkdownHeaderTextSplitter + RecursiveCharacterTextSplitter
    "PyYAML>=6.0",                  # Config loader (conf/config.yaml, clean_rules.yaml)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]
sqlite-vec = ["sqlite-vec"]  # Local vector storage (lightweight, single-file)

[tool.setuptools.packages.find]
include = ["myrag*"]
