[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrag-pipeline"
version = "0.1.0"
description = "RAG data cleanup pipeline with multi-format parsers and bge-m3 embedding service."
requires-python = ">=3.10"
dependencies = [
    "markitdown[pdf]>=0.1",         # Universal doc conversion (PDF, DOCX, MD, TXT)
    "trafilatura>=1.12",            # HTML content extraction
    "httpx>=0.27",                  # HTTP client for LLM + embedding APIs
    "markdown-it-py>=3.0,<4",      # Markdown parser (replaces LangChain chunker)
    "PyYAML>=6.0",                  # Config loader (conf/config.yaml, clean_rules.yaml)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]
sqlite-vec = ["sqlite-vec"]  # Local vector storage (lightweight, single-file)
local-embeddings = ["sentence-transformers>=2.7,<3"]  # Local bge-m3 (CPU inference, ~1.1GB model)

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["myrag_pipeline.egg-info", "tests*"]

[tool.setuptools]
py-modules = ["pipeline", "config"]
